# Code_Alpha-Sales-Prediction-using-Python

./: README.md  app.py  pyproject.toml
src/: data_processor.py  models.py  utils.py  visualizations.py
